<resources>
    <string name="app_name">Stay Slim App</string>
    <string name="weight">Wpisz wage</string>
    <string name="growth">Wpisz wzrost</string>
    <string name="age">Wpisz wiek</string>
    <string name="female">Kobieta</string>
    <string name="male">Mężczyzna</string>

    <string name="hello_blank_fragment">Witaj w Stay Slim App</string>
    <string name="calculate_blank_fragment">Oblicz BMI</string>
    <string name="calories_blank_fragment">Oblicz swoje zapotrzebowanie kalorii</string>
    <string name="calculate_ppm">Oblicz PPM</string>
    <string name="recipe_blank_fragment">Poznaj nowe przepisy</string>
    <string name="input_data">Podaj dane</string>
    <string name="calculate">Oblicz</string>
    <string name="recipe1">Omlet jajeczny z chilli</string>

    <string name="recipe_describe">Jajka rozbijcie w misce i dodajcie do nich chilli. Na bardzo dobrze rozgrzaną patelnie, posmarowaną olejem rzepakowym, wlejcie jajka i od razu układajcie na nich pokrojone w plasterki warzywa. Taki omlet, pod przykrywką, będzie gotowy w około 5-8 minut.
</string>

    <string name="recipe2">Granola z jogurtem i owocami</string>

    <string name="recipe2_describe">Do miseczki przekładam jogurt naturalny, posypuję go dużą ilością domowej granoli, na wierzch wykładam umyte i osuszone owoce. </string>
    <string name="slogan">Smacznego!</string>






</resources>
